# traeff_ros_code

./: Dockerfile  README.md  docker-compose.yaml  traeff_ros_topics.drawio
competition/: CMakeLists.txt  idea.md  package.xml
competition/.cache/clangd/index/: main_routine.cpp.FF27B8B9716768E6.idx
competition/src/: main_routine.cpp
path_generator/: path_generator.cpp
ros_src/: test.py
ros_src/map_generator/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros_src/map_generator/map_generator/: map_generator.py
ros_src/mission_control/: CMakeLists.txt  compile_commands.json  package.xml
ros_src/mission_control/.cache/clangd/index/: main_mission.cpp.E027593780C9C548.idx
ros_src/mission_control/launch/: jetson_mavros.launch.py  main_mission.launch.py  manual_node.launch.py  sim_mavros.launch.py
ros_src/mission_control/src/: main_mission.cpp  manual_mission.cpp
ros_src/path_generator/: package.xml  setup.py
ros_src/path_generator/path_generator/: path_generator.py
ros_src/visualizer/: CMakeLists.txt  package.xml
ros_src/visualizer/launch/: visualizer_launch.py
ros_src/visualizer/rviz/: visualizer.rviz
ros_src/visualizer/src/: map_exporter.cpp
